--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start:dev": "webpack-dev-server --open"
   },
   "dependencies": {
-    "antd": "^4.4.2"
+    "antd": "^4.4.2",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
