--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "antd": "^4.4.2",
+    "less": "^3.11.3",
+    "less-loader": "^6.2.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2"
   },
